--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@rainbow-me/rainbowkit": "^1.0.1",
     "alchemy-sdk": "^2.9.0",
     "next": "^13.4.3",
