--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.0.2",
     "@rainbow-me/rainbowkit": "^1.0.1",
+    "@tanstack/react-query": "^4.29.12",
     "alchemy-sdk": "^2.9.0",
     "next": "^13.4.3",
     "react": "^18.2.0",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^18.16.12",
     "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.5",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.15.0",
     "eslint-config-next": "^13.4.3",
