--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "click-mints",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,26 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.0.2",
-    "@rainbow-me/rainbowkit": "^1.0.1",
-    "@tanstack/react-query": "^4.29.12",
+    "@material-tailwind/react": "^2.0.4",
+    "@rainbow-me/rainbowkit": "^0.12.15",
     "alchemy-sdk": "^2.9.0",
-    "next": "^13.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.6",
+    "FormData": "^0.10.1",
+    "formidable": "^3.4.0",
+    "next": "13.4.6",
+    "postcss": "8.4.24",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "viem": "~0.3.35",
-    "wagmi": "~1.0.5"
-  },
-  "devDependencies": {
-    "@types/node": "^18.16.12",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.5",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "^13.4.3",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "tailwindcss": "3.3.2",
+    "wagmi": "^0.12.16"
   }
 }
