--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
-    "FormData": "^0.10.1",
+    "form-data": "^4.0.0",
     "formidable": "^3.4.0",
     "next": "13.4.6",
     "postcss": "8.4.24",
