--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,20 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.0.4",
-    "@rainbow-me/rainbowkit": "^0.12.15",
+    "@rainbow-me/rainbowkit": "^0.12.16",
     "alchemy-sdk": "^2.9.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "form-data": "^4.0.0",
-    "formidable": "^3.4.0",
+    "formidable": "^2.1.2",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "tailwindcss": "3.3.2",
-    "wagmi": "^0.12.16"
+    "wagmi": "^0.12.18"
   }
 }
